maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:4: error: value North is not a member of object plm.universe.Direction
  case 0 =>while (getDirection()!=Direction.North) {right()};
                                            ^